python/testData/highlighting/starInGenerator.py
y = (<error descr="Can't use starred expression here">*()</error> for _ in ())